dot set for git

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="box1 box">
             <div class="box-content">
                 <h2>Gaming accessories</h2>
-                <div class="box-img" style="background-image: url(/Accessries_files/1st.jpg);">
+                <div class="box-img" style="background-image: url(./Accessries_files/1st.jpg);">
 
                 </div>
                 <p>
@@ -134,7 +134,7 @@
         <div class="box2 box">
             <div class="box-content">
                 <h2>Shop deals in Fashion</h2>
-                <div class="box-img" style="background-image: url(/Accessries_files/ladki.jpg);">
+                <div class="box-img" style="background-image: url(./Accessries_files/ladki.jpg);">
 
                 </div>
                 <p>
@@ -145,7 +145,7 @@
         <div class="box3 box">
             <div class="box-content">
                 <h2>Deals in PCs</h2>
-                <div class="box-img" style="background-image: url(/Accessries_files/chair.jpg);">
+                <div class="box-img" style="background-image: url(./Accessries_files/chair.jpg);">
 
                 </div>
                 <p>
@@ -156,7 +156,7 @@
         <div class="box4 box">
             <div class="box-content">
                 <h2>Amazon Gadget Store</h2>
-                <div class="box-img" style="background-image: url(/Accessries_files/lakiLaptop.jpg);">
+                <div class="box-img" style="background-image: url(./Accessries_files/lakiLaptop.jpg);">
 
                 </div>
                 <p>
@@ -168,7 +168,7 @@
         <div class="box1 box">
             <div class="box-content">
                 <h2>Gaming accessories</h2>
-                <div class="box-img" style="background-image: url(/Accessries_files/watch.jpg);">
+                <div class="box-img" style="background-image: url(./Accessries_files/watch.jpg);">
 
                 </div>
                 <p>
@@ -180,7 +180,7 @@
         <div class="box2 box">
             <div class="box-content">
                 <h2>Shop deals in Fashion</h2>
-                <div class="box-img" style="background-image: url(/Accessries_files/lap.jpg);">
+                <div class="box-img" style="background-image: url(./Accessries_files/lap.jpg);">
 
                 </div>
                 <p>
@@ -191,7 +191,7 @@
         <div class="box3 box">
             <div class="box-content">
                 <h2>Deals in PCs</h2>
-                <div class="box-img" style="background-image: url(/Accessries_files/boy.jpg);">
+                <div class="box-img" style="background-image: url(./Accessries_files/boy.jpg);">
 
                 </div>
                 <p>
@@ -202,7 +202,7 @@
         <div class="box4 box">
             <div class="box-content">
                 <h2>Amazon Gadget Store</h2>
-                <div class="box-img" style="background-image: url(/Accessries_files/man.jpg);">
+                <div class="box-img" style="background-image: url(./Accessries_files/man.jpg);">
 
                 </div>
                 <p>
